custom/default/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-deployment
  finalizers:
    - tailscale.com/finalizer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: whoami
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerClass: tailscale
